# Agentic-AI-Basic

AI Researcher/: pyproject.toml
AI Researcher/src/ai_news/: main.py  report.md
AI_pdf_Reader/: PDF_query.py  requirement.txt
Agent Flow/: flow_demo.py
Agent Flow/poem_generator/src/poem_generator/: crew.py
Agent Flow/summary_generator/src/summary_generator/: crew.py
Google Agent SDK/: PDF Rag Application.py  requirement.txt
Google Agent SDK/research_paper_ui/: test.py
Google Agent SDK/research_paper_ui/chroma_db/: chroma.sqlite3
Meeting Partner/Files/: markdown_file.md
Meeting Partner/Summariser/src/: crew.py  main.py
Meeting Partner/Summariser/src/config/: agents.yaml  tasks.yaml
Meeting Partner/meeting_minutes/src/: Email_Agent.py  Summarisation.py  main.py
Meeting Partner/meeting_minutes/src/gmail_crew/: gmail_crew.py
Meeting Partner/meeting_minutes/src/meeting_minutes/: Summarisation.py  main.py  meeting_minutes_crew.py
OPENAI SDK/: Basic_Tool.py  HandOff.py  MCP_Server.py  QuickStart.py  Stream.py  Structured_Output.py
PDF Reader/: PDF_reader_prim.py  requirement.txt
PDF Reader/faiss_index/: index.faiss  index.pkl
Speech Generation/: Text_To_Speech.py
ai_news/: README.md
ai_news/src/ai_news/: crew.py  main.py  report.md
ai_news_researcher/: pyproject.toml
ai_news_researcher/src/ai_news_researcher/: crew.py  main.py  new.md  report.md
ai_news_researcher/src/ai_news_researcher/config/: tasks.yaml
poem_flow/: README.md  pyproject.toml
poem_flow/src/poem_flow/: main.py  poem.txt
(+14 files in other folders)
