[project]
name = "ai_news_researcher"
version = "0.1.0"
description = "AI_News_Researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ai_news_researcher = "ai_news_researcher.main:run"
run_crew = "ai_news_researcher.main:run"
train = "ai_news_researcher.main:train"
replay = "ai_news_researcher.main:replay"
test = "ai_news_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
